tests/integration/snapshots/integration__conformance__n_number_-2..json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[-2.]
stderr ---
error: expected fraction digit following dot, found `]`
 --> stdin:1:5
  |
1 | [-2.]
  |  ---^
  |  | |
  |  | decimal point found here
  |  number found here
